k8s/reprepro/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reprepro
  labels:
    app: reprepro
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  selector:
    matchLabels:
      app: reprepro
  template:
    metadata:
      name: reprepro
      labels:
        app: reprepro
      annotations:
        gke-gcsfuse/volumes: "true"
    spec:
      serviceAccountName: reprepro
      containers:
        - name: reprepro
          image: nginxinc/nginx-unprivileged:1.31.6@sha256:ce1317316e272062981736063d4a7eed7d80b0d2a53da1305d0752aa4aee7a48
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: config
              readOnly: true
            - mountPath: /srv
              name: data
              readOnly: true
            - mountPath: /tmp
              name: tmp
          resources:
            requests:
              cpu: 10m
              memory: 48Mi
            limits:
              memory: 64Mi
          livenessProbe:
            httpGet:
              port: http
              path: /
          readinessProbe:
            httpGet:
              port: http
              path: /
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: nginx-config
        - name: data
          csi:
            driver: gcsfuse.csi.storage.gke.io
            readOnly: true
            volumeAttributes:
              bucketName: "anshulg-debian-apt"
              gcsfuseLoggingSeverity: warning
              mountOptions: "implicit-dirs"
        - name: tmp
          emptyDir:
            medium: Memory
