k8s/reprepro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reprepro
spec:
  selector:
    app: reprepro
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
